client: Fix body jumping around when lightbox is opened
Fancybox hid the scrollbar from body and added a margin to replace it. But the scrollbar actually came from html so it remained visible and the extra margin made the body jump around.

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -4,17 +4,15 @@
 
 /* base */
 
-html {
+html,
+body {
     height: 100%;
-    overflow-x: hidden;
 }
 
 body {
     font: lighter 18px/27px 'Open Sans', Arial, sans-serif;
     color: black;
     background: url(../images/bg.gif) repeat;
-    height: 100%;
-    position: relative;
 }
 
 select,
